fix(layout): Mini Layouts Align Icons with Hamburger Menu in Dense Mode

--- a/packages/layout/src/_mixins.scss
+++ b/packages/layout/src/_mixins.scss
@@ -110,6 +110,10 @@
 
     flex: 1 1 auto;
     height: 100%;
+
+    &__mini-item {
+      justify-content: center;
+    }
   }
 
   .rmd-layout-tree {
